trying to display equations

--- a/_posts/2019-08-18-Asylum.md
+++ b/_posts/2019-08-18-Asylum.md
@@ -4,6 +4,7 @@ categories:
   - complex_sytems
 tags:
   - asylum seekers unhcr migration global
+mathjax: true
 last_modified_at: 2019-08-09T21:33:37-04:00
 ---
 
@@ -38,21 +39,21 @@ A great variety of systems can be modeled by the interactions of the agents that
 
 Imagine a person in they're regular life, then they could be at different places
 
-<img src="https://olangle.w3.uvm.edu/random/int-act.jpg" alt="act" style="width:380px;">
+<img src="/assets/images/asylum/int-act.jpg" alt="act" style="width:380px;">
 
 thing that happens a different times
 
-<img src="https://olangle.w3.uvm.edu/random/int-time.jpg" alt="time" style="width:380px;">
+<img src="/assets/images/asylum/int-time.jpg" alt="time" style="width:380px;">
 
 and like that we can think about the underlying networks that this person is part of in a day as a unique entity with a temporal property
 
-<img src="https://olangle.w3.uvm.edu/random/int-net.jpg" alt="net" style="width:380px;">
+<img src="/assets/images/asylum/int-net.jpg" alt="net" style="width:380px;">
 
 When working on temporal networks usually the edge weights are defined in  function of interactions in a slice of time and assign a cumulative weight according to the number of times such interaction was seen during that tie. This approach usually returns a very dense network, thus is common to define a threshold for the weights where we keep the edges which values falls above it.
 
-<img src="https://olangle.w3.uvm.edu/random/temp-slice.jpg" alt="slice" style="width:380px;">
+<img src="/assets/images/asylum/temp-slice.jpg" alt="slice" style="width:380px;">
 
-<img src="https://olangle.w3.uvm.edu/random/temp-thres.jpg" alt="threshold" style="width:380px;">
+<img src="/assets/images/asylum/temp-thres.jpg" alt="threshold" style="width:380px;">
 
 ## Temporal Correlation Coefficient for Directed Networks
 
@@ -102,33 +103,33 @@ The datasets provided by the UNHCR are very extensive and gathers information ab
 
 From the datasets that are freely available from the UNHCR and World Bank we can create a database with the information we think is relevant, as so we have shared the following data pipeline in the [Github](https://github.com/migrationets/migration.git) repo that's shown on the top of this entry.
 
-<img src="https://olangle.w3.uvm.edu/random/datapipeline.png" alt="heatmap" style="width:700px;">
+<img src="/assets/images/asylum/datapipeline.png" alt="heatmap" style="width:700px;">
 
 Which gives access to a clean database in Neo4j as it is graph oriented. There we have ID's for 247 Countries or regions, with their geographical centroids, populations (1960-2016) and GDP (1960-2016) and the information between those Countries is the number of current refugees, asylum seekers, returned, internally displaced people (numbers from the UNHCR which are not very complete), aggregated demographics by gender and age, resettlers, pending petitions and applications, all of these in a yearly and monthly basis.
 
 If we take the number of asylum petitions between every pair of Countries from 2000 to 2017 we can construct the following incidence matrix:
 
-<img src="https://olangle.w3.uvm.edu/random/heat-asylum.gif" alt="heatmap" style="width:700px;">
+<img src="/assets/images/asylum/heat-asylum.gif" alt="heatmap" style="width:700px;">
 
 There we can clearly see that the growth of petitions has grown exponentially since 2015, but we might also be interested in the top $$n$$ highest edge weights and we could draw the network over a map for better understanding.
 
-<img src="https://olangle.w3.uvm.edu/random/dynamic_map.gif" alt="dynmap" style="width:700px;">
+<img src="/assets/images/asylum/dynamic_map.gif" alt="dynmap" style="width:700px;">
 
 But what we actually want to see is the correlation between the edges at every time step, which could be at yearly basis
 
-<img src="https://olangle.w3.uvm.edu/random/stacked_all_to_2000.png" alt="dynmap" style="width:700px;">
+<img src="/assets/images/asylum/stacked_all_to_2000.png" alt="dynmap" style="width:700px;">
 
 And we can take a look to the topological overlap of the indegree edges by year and Country
 
-<img src="https://olangle.w3.uvm.edu/random/topological_overlap_in_nodist.png" width="700">
+<img src="/assets/images/asylum/topological_overlap_in_nodist.png" width="700">
 
 As well as for the outdegree
 
-<img src="https://olangle.w3.uvm.edu/random/topological_overlap_out_nodist.png" width="700">
+<img src="/assets/images/asylum/topological_overlap_out_nodist.png" width="700">
 
 To finally look at the mean topological overlap for the Countries along the 17 years
 
-<img src="https://olangle.w3.uvm.edu/random/mean_topological_overlap_nodist.png" width="700">
+<img src="/assets/images/asylum/mean_topological_overlap_nodist.png" width="700">
 
 Where it is easy to see that the overlap is much greater for the outdegree than the indegree which means that in this century the set of Countries from where people is trying to leave is more steady than the set of Countries where they're trying to get in. This could be because of rejection reasons in the past, conflicts between nations, bad reception from citizens or other reasons that would be good to look at.
 
